<resources>
  <string name="my_tracks_app_name"
    translation_description="The UV Guardian application name.">
      UV Guardian
  </string>
  <string name="my_tracks_recording_service"
    translation_description="When viewing the 'Running services' on Android, the name of the My
      Tracks service that is recording a track in the background.

      Character limit: ~23 (1 line)">
    Recording service
  </string>
  <string name="uvi_current_tab"
    translation_description="In the UVI page, the title the title of the tab showing the map.">
    Current
  </string>
  <string name="uvi_hourly_tab"
    translation_description="In the UVI page, the title the title of the tab showing the map.">
    Hourly
  </string>
  <string name="uvi_recommendation_tab"
    translation_description="In the UVI page, the title the title of the tab showing the map.">
    Recommendations
  </string>
  <string name="uvg_spf_level"
    translation_description="In the page to select spf level.">
    SPF level (e.g. SPF 15)
  </string>
  <string name="uvg_spf_level_hint"
    translation_description="In the page to edit a track, the hint in the 'Profile type' text field
      when it is empty.">
    SPF level
  </string>
  <string name="uvg_skin_type"
    translation_description="In the page to select skin type.">
    Skin type (e.g. IV)
  </string>
  <string name="uvg_skin_type_hint"
    translation_description="In the page to edit a track, the hint in the 'Activity type' text field
      when it is empty.">
    Skin type
  </string>
   <string name="sdefault">4</string>
    <string name="current_uvi_title">Current UVI</string>
    <string name="current_uvi_description">UVI Scale</string>
  <string name="spf_0"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    None
  </string>
    <string name="spf_8"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    SPF 8
  </string>
    <string name="spf_15"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    SPF 15
  </string>
	<string name="spf_30"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    SPF 30
  </string>
    <string name="spf_45"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    SPF 45
  </string>
      <string name="spf_50"
    translation_description="When entering an 'SPF Level', in the auto-complete text box, the
      completion suggestion for spf factor">
    SPF 50
  </string>
   <string name="skin_type_I"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    I
  </string>
     <string name="skin_type_II"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    II
  </string>
     <string name="skin_type_III"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    III
  </string>
     <string name="skin_type_IIII"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    IIII
  </string>
     <string name="skin_type_IV"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    IV
  </string>
  <string name="skin_type_V"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    V
  </string>
  <string name="skin_type_VI"
    translation_description="When entering an 'Skin type', in the auto-complete text box, the
      completion suggestion for skin type">
    VI
  </string>
  <string name="about_copyright_notice"
    translation_description="In the 'About UV Guardian' page, the copyright notice.">
    Copyright 2013 Google Inc.
  </string>
  <string name="about_license"
    translation_description="In the 'About UV Guardian' page, the button on the bottom to open the
      'Terms of service' dialog.">
    License
  </string>
  <string name="about_privacy"
    translation_description="In the 'About UV Guardian' page, label for the privacy link. E.g.,
      'Privacy: m.google.com/privacy'.">
    Privacy:
  </string>
  <string name="about_support"
    translation_description="In the 'About UV Guardian' page, label for the support link. E.g.,
      'Support: mytracks.appspot.com'.">
    Support:
  </string>
  <string name="about_version"
    translation_description="In the 'About UV Guardian' page, label for the version number. E.g.,
      'Version: 1.1.11'.">
    Version:
  </string>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for biking.">
    biking
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for boat.">
    boat
  </string>
  <string name="activity_type_climbing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for climbing.">
    climbing
  </string>
  <string name="activity_type_commercial_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for commercial airplane.">
    commercial airplane
  </string>
  <string name="activity_type_cross_country_skiing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing.">
    cross-country skiing
  </string>
  <string name="activity_type_cycling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cycling.">
    cycling
  </string>
  <string name="activity_type_dirt_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for dirt bike.">
    dirt bike
  </string>
  <string name="activity_type_donkey_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for donkey back riding.">
    donkey back riding
  </string>
  <string name="activity_type_driving"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving.">
    driving
  </string>
  <string name="activity_type_driving_bus"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving bus.">
    driving bus
  </string>
  <string name="activity_type_driving_car"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving car.">
    driving car
  </string>
  <string name="activity_type_ferry"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ferry.">
    ferry
  </string>
  <string name="activity_type_frisbee"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for frisbee.">
    frisbee
  </string>
  <string name="activity_type_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for gliding.">
    gliding
  </string>
  <string name="activity_type_hang_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hang gliding.">
    hang gliding
  </string>
  <string name="activity_type_helicopter"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for helicopter.">
    helicopter
  </string>
  <string name="activity_type_hiking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hiking.">
    hiking
  </string>
  <string name="activity_type_horse_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for horse back riding.">
    horse back riding
  </string>
  <string name="activity_type_hot_air_balloon"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hot air balloon.">
    hot air balloon
  </string>
  <string name="activity_type_ice_sailing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ice sailing.">
    ice sailing
  </string>
  <string name="activity_type_inline_skating"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for inline skating.">
    inline skating
  </string>
  <string name="activity_type_kayaking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for kayaking.">
    kayaking
  </string>
  <string name="activity_type_kite_surfing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for kite surfing.">
    kite surfing
  </string>
  <string name="activity_type_land_sailing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for land sailing.">
    land sailing
  </string>
  <string name="activity_type_mixed_type"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for mixed type.">
    mixed type
  </string>
  <string name="activity_type_motor_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for motor bike.">
    motor bike
  </string>
  <string name="activity_type_motor_boating"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for motor boating.">
    motor boating
  </string>
  <string name="activity_type_mountain_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for mountain biking.">
    mountain biking
  </string>
  <string name="generic_name"
    translation_description="The text label for entering a name.">
    Name
  </string>
</resources>