<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:orientation="vertical" >
  <ScrollView style="@style/ScrollView.WithBottomButtons" >
    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="8dp" >
      <TextView
        android:text="@string/generic_name"
        style="@style/EditLabel" />
      <EditText
        android:hint="@string/generic_name"
        android:id="@+id/uvg_profile_name"
        android:imeOptions="actionNext"
        style="@style/EditNameTrack" />

      <TextView
          android:id="@+id/uvg_profile_skin_type_label"
          style="@style/EditLabel.WithPaddingTop"
          android:text="@string/uvg_skin_type" />

      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/uvg_profile_skin_type"
            style="@style/EditCategory"
            android:layout_width="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/uvg_skin_type_hint"
            android:imeOptions="actionNext"/>

        <ImageButton
            android:id="@+id/uvg_profile_skin_type_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/uvg_skin_type"
            android:src="@drawable/skin_type" />

      </LinearLayout>

<TextView
    android:id="@+id/uvg_profile_spf_level_label"
    style="@style/EditLabel.WithPaddingTop"
    android:text="@string/uvg_spf_level" />

      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/uvg_profile_spf_level"
            style="@style/EditCategory"
            android:layout_width="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/uvg_spf_level_hint"
            android:imeOptions="actionNext" />

        <ImageButton
            android:id="@+id/uvg_profile_spf_level_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/uvg_spf_level"
            android:src="@drawable/spf" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
  <LinearLayout style="@style/BottomButtonBar" >
    <include layout="@layout/track_edit_buttons" />
  </LinearLayout>
</LinearLayout>